# xDNN

./: CMakeLists.txt  README.md  prepare.sh
include/: amx_sgemm_bf16bf16bf16.h  bgemm_f32bf16f32.h  hgemm.h  hgemm_f16f16f32.h  hgemm_f32f16f16.h  hgemm_f32f16f32.h  hgemm_f32i8f32.h  hgemm_f32s8f32.h  hgemm_f32u4f32.h  intrinsic_ext.h  sgemm.h  sgemm_bf16bf16f32.h  sgemm_f32bf16bf16.h  sgemm_f32f16bf16.h  sgemm_f32f16f32.h  sgemm_f32i8f32.h  sgemm_f32nf4f32.h  sgemm_f32s8f32.h  sgemm_f32u4f32.h  softmax.h  transpose.h  xdnn.h
include/data_types/: bfloat16.h  bit_convert.h  data_types.h  float16.h  normal_float4x2.h  uint4x2.h
lib/: VERSION
perf_test/: CMakeLists.txt  Makefile  benchmark_amx_sgemm_bf16bf16bf16.cpp  benchmark_bgemm_f32bf16f32.cpp  benchmark_hgemm.cpp  benchmark_hgemm_f16f16f32.cpp  benchmark_hgemm_f32f16f16.cpp  benchmark_hgemm_f32f16f32.cpp  benchmark_hgemm_f32i8f32.cpp  benchmark_hgemm_f32s8f32.cpp  benchmark_hgemm_f32u4f32.cpp  benchmark_sgemm.cpp  benchmark_sgemm_f32f16f32.cpp  benchmark_sgemm_f32i8f32.cpp  benchmark_sgemm_f32nf4f32.cpp  benchmark_sgemm_f32s8f32.cpp  benchmark_sgemm_f32u4f32.cpp  run_benchmark.sh
unit_test/: CMakeLists.txt  Makefile  run_test.sh  test_amx_sgemm_bf16bf16bf16.cpp  test_bgemm_f32bf16f32  test_bgemm_f32bf16f32.cpp  test_hgemm.cpp  test_hgemm_f16f16f32  test_hgemm_f16f16f32.cpp  test_hgemm_f32f16f16  test_hgemm_f32f16f16.cpp  test_hgemm_f32f16f32  test_hgemm_f32f16f32.cpp  test_hgemm_f32i8f32.cpp  test_hgemm_f32s8f32  test_hgemm_f32s8f32.cpp  test_hgemm_f32u4f32.cpp  test_intrinsic_ext.cpp  test_sgemm  test_sgemm.cpp  test_sgemm_bf16bf16f32.cpp  test_sgemm_f32bf16bf16.cpp  test_sgemm_f32f16bf16.cpp  test_sgemm_f32f16f32  test_sgemm_f32f16f32.cpp  test_sgemm_f32i8f32.cpp  test_sgemm_f32nf4f32.cpp  test_sgemm_f32s8f32  test_sgemm_f32s8f32.cpp  test_sgemm_f32u4f32.cpp  test_softmax.cpp  test_transpose.cpp
utils/: perf_cases.h  test.h  timer.h  unit_cases.h  utils.h
