cmake_minimum_required(VERSION 3.15.1)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)

add_executable(test_intrinsic_ext test_intrinsic_ext.cpp)
target_link_libraries(test_intrinsic_ext PRIVATE xdnn_static)

add_executable(test_transpose test_transpose.cpp)
target_link_libraries(test_transpose PRIVATE xdnn_static)

add_executable(test_sgemm test_sgemm.cpp)
target_link_libraries(test_sgemm PRIVATE xdnn_static)

add_executable(test_sgemm_f32f16f32 test_sgemm_f32f16f32.cpp)
target_link_libraries(test_sgemm_f32f16f32 PRIVATE xdnn_static)

add_executable(test_sgemm_f32s8f32 test_sgemm_f32s8f32.cpp)
target_link_libraries(test_sgemm_f32s8f32 PRIVATE xdnn_static)

add_executable(test_sgemm_f32u4f32 test_sgemm_f32u4f32.cpp)
target_link_libraries(test_sgemm_f32u4f32 PRIVATE xdnn_static)

add_executable(test_sgemm_f32nf4f32 test_sgemm_f32nf4f32.cpp)
target_link_libraries(test_sgemm_f32nf4f32 PRIVATE xdnn_static)

add_executable(test_hgemm test_hgemm.cpp)
target_link_libraries(test_hgemm PRIVATE xdnn_static)

add_executable(test_hgemm_f16f16f32 test_hgemm_f16f16f32.cpp)
target_link_libraries(test_hgemm_f16f16f32 PRIVATE xdnn_static)

add_executable(test_hgemm_f32f16f16 test_hgemm_f32f16f16.cpp)
target_link_libraries(test_hgemm_f32f16f16 PRIVATE xdnn_static)

add_executable(test_hgemm_f32f16f32 test_hgemm_f32f16f32.cpp)
target_link_libraries(test_hgemm_f32f16f32 PRIVATE xdnn_static)

add_executable(test_hgemm_f32s8f32 test_hgemm_f32s8f32.cpp)
target_link_libraries(test_hgemm_f32s8f32 PRIVATE xdnn_static)

add_executable(test_hgemm_f32u4f32 test_hgemm_f32u4f32.cpp)
target_link_libraries(test_hgemm_f32u4f32 PRIVATE xdnn_static)

add_executable(test_bgemm_f32bf16f32 test_bgemm_f32bf16f32.cpp)
target_link_libraries(test_bgemm_f32bf16f32 PRIVATE xdnn_static)

add_executable(test_amx_sgemm_bf16bf16bf16 test_amx_sgemm_bf16bf16bf16.cpp)
target_link_libraries(test_amx_sgemm_bf16bf16bf16 PRIVATE xdnn_static)

add_executable(test_sgemm_bf16bf16f32 test_sgemm_bf16bf16f32.cpp)
target_link_libraries(test_sgemm_bf16bf16f32 PRIVATE xdnn_static)

add_executable(test_sgemm_f32bf16bf16 test_sgemm_f32bf16bf16.cpp)
target_link_libraries(test_sgemm_f32bf16bf16 PRIVATE xdnn_static)

add_executable(test_sgemm_f32f16bf16 test_sgemm_f32f16bf16.cpp)
target_link_libraries(test_sgemm_f32f16bf16 PRIVATE xdnn_static)

add_executable(test_softmax test_softmax.cpp)
target_link_libraries(test_softmax PRIVATE xdnn_static)